--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ First, the data from the existing graph must be updated. In order to do this we 
 </p> 
 
     <h3>Transitions</h3>
- <p> Smooth transitions can also be added by .transition() and the duration (how long the transition will take) of the transition can be specified. However it is important to note in our code that the duration must come after the transition. 
+ <p> Smooth transitions can also be added by .transition() and the duration (how long the transition will take) of the transition can be specified. However it is important to note in our code that the duration must come after the transition. Another factor to consider with transitions is the quaility of motion. This quiality can be regulated by using .ease(). 
       
 </p>
 <p> 
